include/clks/net.h

clks_bool clks_net_available(void);
u32 clks_net_ipv4_addr_be(void);
u32 clks_net_ipv4_netmask_be(void);
u32 clks_net_ipv4_gateway_be(void);
u32 clks_net_ipv4_dns_be(void);
clks_bool clks_net_ping_ipv4(u32 dst_ipv4_be, u64 poll_budget);
u64 clks_net_udp_send(u32 dst_ipv4_be, u16 dst_port, u16 src_port, const void *payload, u64 payload_len);
u64 clks_net_udp_recv(void *out_payload, u64 payload_capacity, u32 *out_src_ipv4_be, u16 *out_src_port,
                      u16 *out_dst_port);
clks_bool clks_net_tcp_connect(u32 dst_ipv4_be, u16 dst_port, u16 src_port, u64 poll_budget);
clks_bool clks_net_tcp_listen(u16 port);
clks_bool clks_net_tcp_accept(u64 poll_budget);
u64 clks_net_tcp_send(const void *payload, u64 payload_len, u64 poll_budget);
u64 clks_net_tcp_recv(void *out_payload, u64 payload_capacity, u64 poll_budget);
clks_bool clks_net_tcp_close(u64 poll_budget);
u64 clks_net_tcp_last_error(void);