include/clks/disk.h


struct clks_disk_fsck_result {
    u64 status;
    u64 checked_clusters;
    u64 free_clusters;
    u64 used_clusters;
    u64 bad_entries;
    u64 loops;
    u64 size_mismatches;
    u64 orphan_clusters;
    u64 fixed_entries;
    u64 fixed_orphans;
};


clks_bool clks_disk_present(void);

u64 clks_disk_size_bytes(void);

u64 clks_disk_sector_count(void);


clks_bool clks_disk_read_sector(u64 lba, void *out_sector);

clks_bool clks_disk_write_sector(u64 lba, const void *sector_data);


clks_bool clks_disk_is_formatted_fat32(void);

clks_bool clks_disk_format_fat32(const char *label);


clks_bool clks_disk_mount(const char *mount_path);

clks_bool clks_disk_is_mounted(void);

const char *clks_disk_mount_path(void);

const void *clks_disk_read_all(const char *path, u64 *out_size);

clks_bool clks_disk_append(const char *path, const void *data, u64 size);

clks_bool clks_disk_fsck_fat32(u64 flags, struct clks_disk_fsck_result *out_result);