rust/src/syscall/ffi.rs


    pub fn clks_disk_present() -> u32;
    pub fn clks_disk_size_bytes() -> u64;
    pub fn clks_disk_sector_count() -> u64;
    pub fn clks_disk_is_formatted_fat32() -> u32;
    pub fn clks_disk_format_fat32(label: *const c_char) -> u32;
    pub fn clks_disk_mount(mount_path: *const c_char) -> u32;
    pub fn clks_disk_is_mounted() -> u32;
    pub fn clks_disk_mount_path() -> *const c_char;
    pub fn clks_disk_read_sector(lba: u64, out_sector: *mut c_void) -> u32;
    pub fn clks_disk_write_sector(lba: u64, sector_data: *const c_void) -> u32;
    pub fn clks_disk_fsck_fat32(flags: u64, out_result: *mut DiskFsckResult) -> u32;
    pub fn clks_disk_read_all(path: *const c_char, out_size: *mut u64) -> *const c_void;
    pub fn clks_disk_append(path: *const c_char, data: *const c_void, size: u64) -> u32;

    pub fn clks_net_available() -> u32;
    pub fn clks_net_ipv4_addr_be() -> u32;
    pub fn clks_net_ipv4_netmask_be() -> u32;
    pub fn clks_net_ipv4_gateway_be() -> u32;
    pub fn clks_net_ipv4_dns_be() -> u32;
    pub fn clks_net_ping_ipv4(dst_ipv4_be: u32, poll_budget: u64) -> u32;
    pub fn clks_net_udp_send(dst_ipv4_be: u32, dst_port: u16, src_port: u16, payload: *const c_void, payload_len: u64) -> u64;
    pub fn clks_net_udp_recv(out_payload: *mut c_void, payload_capacity: u64, out_src_ipv4_be: *mut u32, out_src_port: *mut u16, out_dst_port: *mut u16) -> u64;
    pub fn clks_net_tcp_connect(dst_ipv4_be: u32, dst_port: u16, src_port: u16, poll_budget: u64) -> u32;
    pub fn clks_net_tcp_listen(port: u16) -> u32;
    pub fn clks_net_tcp_accept(poll_budget: u64) -> u32;
    pub fn clks_net_tcp_send(payload: *const c_void, payload_len: u64, poll_budget: u64) -> u64;
    pub fn clks_net_tcp_recv(out_payload: *mut c_void, payload_capacity: u64, poll_budget: u64) -> u64;
    pub fn clks_net_tcp_close(poll_budget: u64) -> u32;
    pub fn clks_net_tcp_last_error() -> u64;

    pub fn clks_mouse_snapshot(out_state: *mut MouseState);
    pub fn clks_inputm_count() -> u64;
    pub fn clks_inputm_info_at(index: u64, out_info: *mut InputmInfo) -> u32;
    pub fn clks_inputm_current() -> u64;
    pub fn clks_inputm_select(index: u64) -> u32;
    pub fn clks_inputm_register(name: *const c_char, path: *const c_char, flags: u64) -> u64;
    pub fn clks_inputm_register_rule(name: *const c_char, path: *const c_char, rule_path: *const c_char, label: *const c_char, flags: u64) -> u64;
    pub fn clks_inputm_status_set(text: *const c_char);

    pub fn clks_driver_count() -> u64;
    pub fn clks_driver_get(index: u64, out_info: *mut DriverInfo) -> u32;
    pub fn clks_driver_load_path(path: *const c_char) -> u64;
    pub fn clks_driver_reload_elf_dir() -> u64;
    pub fn clks_driver_unload(name_or_path: *const c_char) -> u32;

    pub fn clks_audio_available() -> u32;
    pub fn clks_audio_play_tone(hz: u64, ticks: u64) -> u32;
    pub fn clks_audio_stop();

    pub fn clks_user_current_info(out_info: *mut UserPublicInfo) -> u32;
    pub fn clks_user_current_is_admin() -> u32;
    pub fn clks_user_login(name: *const c_char, password: *const c_char, out_info: *mut UserPublicInfo) -> u32;
    pub fn clks_user_logout();
    pub fn clks_user_count() -> u64;
    pub fn clks_user_at(index: u64, out_info: *mut UserPublicInfo) -> u32;
    pub fn clks_user_create(name: *const c_char, password: *const c_char, role: u64) -> u32;
    pub fn clks_user_change_password(name: *const c_char, old_password: *const c_char, new_password: *const c_char) -> u32;
    pub fn clks_user_set_role(name: *const c_char, role: u64) -> u32;
    pub fn clks_user_remove(name: *const c_char) -> u32;
    pub fn clks_user_path_read_allowed(path: *const c_char) -> u32;
    pub fn clks_user_path_write_allowed(path: *const c_char) -> u32;
    pub fn clks_user_privileged_operation_allowed() -> u32;

    pub fn clks_pmm_get_stats() -> PmmStats;
    pub fn clks_heap_get_stats() -> HeapStats;
    pub fn clks_kmalloc(size: usize) -> *mut c_void;
    pub fn clks_kfree(ptr: *mut c_void);
    pub fn clks_locale_current() -> *const c_char;
    pub fn clks_locale_is_valid(locale: *const c_char) -> u32;
    pub fn clks_locale_set(locale: *const c_char, persist: u32) -> u32;
    pub fn clks_boot_get_cmdline() -> *const c_char;
}
